# FreshStart

./: .gitignore  README.md  index.html  package-lock.json  package.json  task.md  test.md  todolist.md
config/: playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
scripts/: copy-release-exe.mjs  run-cargo.mjs  run-playwright.mjs  run-tauri.mjs  rust-env.mjs
src/: App.tsx  backend.ts  index.css  mockData.ts  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  startup.rs
src/lib/: items.ts  risk.ts
tests/e2e/: app.spec.ts
tests/unit/: App.test.tsx  items.test.ts
