[package]
name = "freshstart"
version = "0.1.0"
description = "FreshStart lightweight startup manager"
authors = ["FreshStart"]
edition = "2021"

[lib]
name = "freshstart_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [] }

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
dirs = "5"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.5.0", features = ["tray-icon"] }
thiserror = "1"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61.3", features = ["Win32_Storage_FileSystem"] }
winreg = "0.52"
